# angular-snap-jwt

./: .gitignore  Main.hs  app.cabal  index.html
snaplets/heist/templates/: about.tpl  contact.tpl  data.tpl  index.tpl  login.tpl  register.tpl
static/js/: app.js
