name:                angie
version:             0.1.0.0
synopsis:            angular app
description:         angular app
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       aeson
                     , base >=4.7 && <4.8
                     , bytestring
                     , case-insensitive
                     , containers
                     , data-default >= 0.5.3
                     , jwt
                     , lens
                     , random
                     , snap
                     , snap-core
                     , snap-loader-static
                     , text
  default-language:    Haskell2010
